policies/resource-limit-types/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "resource-limit-types.vap-library.com"
spec:
  failurePolicy: Fail
  paramKind:
    apiVersion: vap-library.com/v1beta1
    kind: VAPLibResourceLimitTypesParam
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods","replicationcontrollers","podtemplates", "pods/ephemeralcontainers"]
    - apiGroups:   ["apps"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["deployments","replicasets","daemonsets","statefulsets"]
    - apiGroups:   ["batch"]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["jobs","cronjobs"]
  validations:
    - expression: "object.kind != 'Pod' ||
      !has(params.spec.enforcedResourceLimitTypes) ||
      (!has(object.spec.initContainers) || object.spec.initContainers.all(container, has(container.resources) && has(container.resources.limits) && params.spec.enforcedResourceLimitTypes.all(l, l in container.resources.limits))) &&
      object.spec.containers.all(container, has(container.resources) && has(container.resources.limits) && params.spec.enforcedResourceLimitTypes.all(l, l in container.resources.limits))"
      message: "If enforcedResourceLimitTypes is set on the parameter, for every container and initContainer in Pods, spec.resources.limits must be present and contain every item from the spec.enforcedResourceLimitTypes list in the policy parameter"
      reason: Invalid
    - expression: "['Deployment','ReplicaSet','DaemonSet','StatefulSet','Job','ReplicationController'].all(kind, object.kind != kind) ||
      !has(params.spec.enforcedResourceLimitTypes) ||
      (!has(object.spec.template.spec.initContainers) || (object.spec.template.spec.initContainers.all(container, has(container.resources) && has(container.resources.limits) && params.spec.enforcedResourceLimitTypes.all(l, l in container.resources.limits)))) &&
      object.spec.template.spec.containers.all(container, has(container.resources) && has(container.resources.limits) && params.spec.enforcedResourceLimitTypes.all(l, l in container.resources.limits))"
      message: "If enforcedResourceLimitTypes is set on the parameter, for every container and initContainer in Workloads, spec.resources.limits must be present and contain every item from the spec.enforcedResourceLimitTypes list in the policy parameter"
      reason: Invalid
    - expression: "object.kind != 'CronJob' || 
      !has(params.spec.enforcedResourceLimitTypes) ||
      (!has(object.spec.jobTemplate.spec.template.spec.initContainers) || object.spec.jobTemplate.spec.template.spec.initContainers.all(container, has(container.resources) && has(container.resources.limits) && params.spec.enforcedResourceLimitTypes.all(l, l in container.resources.limits))) &&
      object.spec.jobTemplate.spec.template.spec.containers.all(container, has(container.resources) && has(container.resources.limits) && params.spec.enforcedResourceLimitTypes.all(l, l in container.resources.limits))"
      message: "If enforcedResourceLimitTypes is set on the parameter, for every container and initContainer in CronJobs, spec.resources.limits must be present and contain every item from the spec.enforcedResourceLimitTypes list in the policy parameter"
      reason: Invalid
    - expression: "object.kind != 'PodTemplate' ||
      !has(params.spec.enforcedResourceLimitTypes) ||
      (!has(object.template.spec.initContainers) || object.template.spec.initContainers.all(container, has(container.resources) && has(container.resources.limits) && params.spec.enforcedResourceLimitTypes.all(l, l in container.resources.limits))) &&
      object.template.spec.containers.all(container, has(container.resources) && has(container.resources.limits) && params.spec.enforcedResourceLimitTypes.all(l, l in container.resources.limits))"
      message: "If enforcedResourceLimitTypes is set on the parameter, for every container and initContainer in PodTemplates, spec.resources.limits must be present and contain every item from the spec.enforcedResourceLimitTypes list in the policy parameter"
      reason: Invalid
